@@ -247,15 +247,13 @@
 }
 
 .footer-navigation-menu {
-	position: relative;
-	display: inline;
+	display: block;
 	margin: 0;
 	list-style-position: outside;
 	list-style-type: none;
 }
 
 .footer-navigation-menu li {
-	position: relative;
 	float: left;
 }
 
@@ -504,62 +502,17 @@
 		padding: 0.35em 1em 0.45em;
 	}
 
-	/*** Mobile Footer Navigation ***/
-
-	/* Footer Navigation Toggle */
-	.footer-navigation-toggle {
-		display: inline-block;
-		float: right;
-		margin: 1.5em 0 0;
-		padding: 1em;
-		background: none;
-	}
-
-	.footer-navigation-toggle:hover,
-	.footer-navigation-toggle:active,
-	.footer-navigation-toggle:focus {
-		background: none;
-		cursor: pointer;
-	}
-
-	.footer-navigation-toggle:after {
-		display: inline-block;
-		float: left;
-		color: #fff;
-		content: '\f419';
-		vertical-align: middle;
-		text-decoration: inherit;
-		font-weight: normal;
-		font-size: 24px;
-		font-family: 'Genericons';
-		line-height: 1;
-		-webkit-font-smoothing: antialiased;
-		-moz-osx-font-smoothing: grayscale;
-	}
-
-	.footer-navigation-toggle:hover:after {
-		color: #ccc;
-	}
-
 	/* Footer Navigation Menu */
 	.footer-navigation {
-		display: block;
-		padding: 0;
-		width: 100%;
+		float: none;
+		text-align: center;
+		padding-bottom: 0;
 	}
 
-	.footer-navigation-menu {
-		display: none;
-		float: right;
-		padding: 0.5em 0 1em;
-		width: 100%;
-		border-top: 2px solid #404040;
+	.footer-navigation-menu li {
+		float: none;
+		display: inline-block;
 	}
-
-	.site-footer .site-info {
-		max-width: 75%;
-	}
-
 }
 
 /*--------------------------------------------------------------
@@ -596,15 +549,14 @@
 	}
 
 	/* Footer Navigation Menu */
-	.footer-navigation-menu li {
-		float: none;
+	.footer-navigation-menu li,
+	.footer-navigation-menu a {
+		display: block;
 	}
 
 	.footer-navigation-menu a {
-		padding: 0.8em 1em;
-		border-bottom: 1px dotted #ccc;
+		padding: 0.4em 0;
 	}
-
 }
 
 /*--------------------------------------------------------------
@@ -653,8 +605,7 @@
 
 /* Ensure footer navigation is visible on desktop view */
 @media only screen and (min-width: 60.001em) {
-	.top-navigation-menu, .footer-navigation-menu {
+	.top-navigation-menu {
 		display: block !important;
 	}
-
 }
